liste de courses

--- a/index.html
+++ b/index.html
@@ -2,4 +2,11 @@
 
 <p>Premier paragraphe.</p>
 
-<h2>Bonjour 6</h2>
+<h2>Courses</h2>
+
+<ul> <!-- liste à puces -->
+    <li>Pain</li> <!-- élément de liste -->
+    <li>Fromage</li>
+    <li>Vin</li>
+    <li>Bières</li>
+</ul>
