--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
-<h1>mon premier code</h1>
+<!DOCTYPE html>
+<html lang="fr"> <!-- précise la langue du contenu de la page -->
+<head>
+    <!-- Jeu de caractères utilisé pour l'encodage du fichier HTML -->
+    <meta charset="UTF-8">
 
-<p>Premier paragraphe.</p>
+    <!-- Très important !!! Bloque le zoom automatique sur smartphones -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<h2>Courses</h2>
+    <!-- Titre de la page -->
+    <title>Steve Fallet | Mon 1er code</title>
 
-<ul> <!-- liste à puces -->
-    <li>Pain</li> <!-- élément de liste -->
-    <li>Fromage</li>
-    <li>Vin</li>
-    <li>Bières</li>
-</ul>
+    <!-- Auteur -->
+    <meta name="author" content="Laure Dinateur">
+</head>
+<body>
+<h1>J'aime la bière</h1>
+<p>Mon prmier &lt;code&gt;</p>
+</body>
+</html>
