--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Steve Fallet | Mon 1er code</title>
 
     <!-- Auteur -->
-    <meta name="author" content="Laure Dinateur">
+    <meta name="author" content="Steve Fallet">
 </head>
 <body>
 <h1>J'aime la bière</h1>
