--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <!-- Auteur -->
     <meta name="author" content="Steve Fallet">
+
+    <!-- Importation du CSS -->
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <h1>J'aime la bière</h1>
